# OxideSerial

./: .gitignore  LICENSE  README.md  README_en-US.md  dev.bat  index.html  package-lock.json  package.json  test_serial.py  vite.config.ts
release/: OxideSerial-v0.0.1-x64.msi
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ErrorBoundary.tsx  Header.tsx  ModbusMonitor.tsx  SettingsPanel.tsx  Sidebar.tsx  TerminalPanel.tsx  WaveformPanel.tsx
src/hooks/: useSerial.ts  useTerminalLogs.ts
src/locales/: index.ts
src/locales/en-US/: translation.json
src/locales/zh-CN/: translation.json
src/locales/zh-HK/: translation.json
src/types/: config.ts  modbus.ts  serial.ts
src/utils/: theme.ts
