[package]
name = "oxide-serial"
version = "0.2.1"
description = "Industrial-grade serial port debugger"
authors = ["Z1R343L-D77"]
license = "MIT"
repository = "https://github.com/Z1R343L-D77/OxideSerial"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
serialport = "4"
time = "0.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
tauri-plugin-window-state = "2"
encoding_rs = "0.8.35"
